@@ -38,7 +38,7 @@ public class OrderService {
 	}
 
 	public List<Order> findAll(Sort sort, BooleanExpression booleanExpression) {
-		return orderDao.findAll(booleanExpression).stream().map(OrderBLLMapper.INSTANCE::entityToModel).collect(Collectors.toList());
+		return orderDao.findAll(booleanExpression).stream().map(OrderBLLMapper.INSTANCE::entityToModel).toList();
 	}
 
 	public Page<Order> findAll(Specification specification) {
